# algocline

./: .gitignore  .luarc.json  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  justfile  release.toml
agents/claude/: alc-runner.md
crates/algocline-app/: Cargo.toml
crates/algocline-app/examples/: gen_alc_shapes_dlua.rs
crates/algocline-app/src/: lib.rs  service.rs
crates/algocline-app/src/service/: alc_toml.rs  card.rs  config.rs  dist.rs  engine_api_impl.rs  error.rs  eval.rs  eval_store.rs  gendoc.rs  hub.rs  hub_dist_preset.rs  init.rs  list_opts.rs  lock.rs  lockfile.rs  logging.rs  manifest.rs  migrate.rs  mod.rs  path.rs  pkg.rs  pkg_link.rs  pkg_scaffold.rs  pkg_unlink.rs  project.rs  resolve.rs  run.rs  scenario.rs  source.rs  status.rs  test_support.rs  transcript.rs  update.rs
crates/algocline-app/src/service/gendoc/: alc_shapes_codegen.rs  templates.rs
crates/algocline-app/src/service/lua/gendoc/: gen_docs.lua
crates/algocline-app/src/service/pkg/: doctor.rs  install.rs  list.rs  mod.rs  read.rs  remove.rs  repair.rs  tests.rs
crates/algocline-app/src/service/tests/: gendoc_bundled_smoke.rs  mod.rs  prop.rs  unit.rs
crates/algocline-app/tests/: alc_shapes_dlua_drift.rs
crates/algocline-core/: Cargo.toml
crates/algocline-core/src/: app_dir.rs  budget.rs  custom.rs  domain.rs  engine_api.rs  lib.rs  metrics.rs  observer.rs  pkg.rs  progress.rs  query.rs  recent_log.rs  spec.rs  state.rs  tokens.rs
crates/algocline-engine/: Cargo.toml
crates/algocline-engine/src/: bridge.rs  card.rs  executor.rs  lib.rs  llm_bridge.rs  prelude.lua  resolver_factory.rs  session.rs  state.rs  variant_pkg.rs
crates/algocline-engine/src/bridge/: data.rs  fork.rs  fuzzy.rs  llm.rs  mod.rs  text.rs
crates/algocline-engine/tests/lua/: bridge_test.lua  eval_integration_test.lua  prelude_test.lua
crates/algocline-mcp/: Cargo.toml
crates/algocline-mcp/src/: lib.rs  resources.rs  service.rs
docs/: hub-gendoc-config.md  lua-stdlib.md  mcp-resources.md
examples/cards/: README.md  prompt_ab_demo.lua  sweep_replay_demo.lua
src/: init.rs  main.rs
std/chain/: init.lua
std/ensemble/: init.lua
std/explore/: init.lua
std/verify/: init.lua
strategies/: amplify.lua  debate.lua  solver.lua
tests/: e2e.rs
tests/fixtures/hub_dist_sample/pkg_alpha/: init.lua
tests/fixtures/hub_dist_sample/pkg_beta/: init.lua
tests/fixtures/hub_dist_sample/pkg_gamma/: init.lua
tests/fixtures/hub_dist_sample/tools/: gendoc.toml
tests/fixtures/hub_dist_sample_compat_declared/pkg_alpha/: init.lua
tests/fixtures/hub_dist_sample_compat_out_of_range/pkg_alpha/: init.lua
tests/fixtures/hub_dist_sample_compat_undeclared/pkg_alpha/: init.lua
tests/fixtures/hub_dist_sample_version_match/alc_shapes/: init.lua
tests/fixtures/hub_dist_sample_version_match/pkg_alpha/: init.lua
tests/fixtures/hub_dist_sample_version_match/tools/: gendoc.toml
tests/fixtures/hub_dist_sample_version_mismatch/alc_shapes/: init.lua
tests/fixtures/hub_dist_sample_version_mismatch/pkg_alpha/: init.lua
tests/fixtures/hub_dist_sample_version_mismatch/tools/: gendoc.toml
tests/snapshots/: e2e__alc_info.snap  e2e__alc_status_empty.snap  e2e__list_tools.snap
types/: alc.d.lua
