[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.17.1"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
authors = ["Yutaka Nishimura"]
repository = "https://github.com/ynishi/algocline"
homepage = "https://github.com/ynishi/algocline"
keywords = ["llm", "mcp", "lua", "reasoning", "ai"]
categories = ["development-tools", "science"]

[workspace.dependencies]
algocline-core = { path = "crates/algocline-core", version = "0.17.1" }
algocline-engine = { path = "crates/algocline-engine", version = "0.17.1" }
algocline-app = { path = "crates/algocline-app", version = "0.17.1" }
algocline-mcp = { path = "crates/algocline-mcp", version = "0.17.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", features = ["preserve_order"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time", "process"] }
tracing = "0.1"
async-trait = "0.1"

[package]
name = "algocline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "LLM amplification engine — MCP server with Lua scripting"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

readme = "README.md"

[[bin]]
name = "alc"
path = "src/main.rs"

[dependencies]
algocline-app = { workspace = true }
algocline-engine = { workspace = true }
algocline-mcp = { workspace = true }

rmcp = { version = "0.16", features = ["server", "transport-io"] }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1"
dirs = "6"
tempfile = "3"

[dev-dependencies]
insta = { version = "1", features = ["json", "redactions"] }
regex = "1"
rmcp = { version = "0.16", features = ["client", "transport-child-process"] }
serde_json = { workspace = true }
tokio = { workspace = true }
