[package]
name = "algocline-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "algocline application layer — execution orchestration, package management"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
algocline-core = { workspace = true }
algocline-engine = { workspace = true }

serde_json = { workspace = true }
tokio = { workspace = true }
dirs = "6"

[dev-dependencies]
tempfile = "3"
