[package]
name = "algocline-app"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "algocline application layer — execution orchestration, package management"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
algocline-core = { workspace = true }
algocline-engine = { workspace = true }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs = "6"
tempfile = "3"

[dev-dependencies]
proptest = "1"
algocline-core = { workspace = true }
