[package]
name = "algocline-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "algocline Lua execution engine — VM, session, bridge"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
algocline-core = { workspace = true }

mlua = { version = "0.11", features = ["lua54", "vendored", "send", "serialize"] }
mlua-isle = { version = "0.4", features = ["tokio"] }
mlua-pkg = "0.2"

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = "1"
dirs = "6"

[dev-dependencies]
proptest = "1"
