[package]
name = "algocline-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "algocline MCP server adapter — thin tool/handler layer over algocline-app"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
algocline-app = { workspace = true }
algocline-core = { workspace = true }

rmcp = { version = "0.16", features = ["server", "transport-io"] }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
async-trait = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
